app/bff/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff
  namespace: bff
spec:
  selector:
    app: bff
  ports:
    - port: 80
      targetPort: 8080
